--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "@types/node": "12.11.2",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "typescript": "3.6.4",
     "bootstrap": "4.3.1",
-    "node-sass": "4.13.0",
     "jquery": "3.4.1",
-    "popper.js": "1.16.0"
+    "node-sass": "4.13.0",
+    "npm": "^6.13.0",
+    "popper.js": "1.16.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "^3.2.0",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
